# campsite

./: .gitignore  CLAUDE.md  README.md  esbuild.config.js  package.json  pyproject.toml  setup.py  watch.sh
campsite/: __init__.py  campsite.py  campsite_server.py  utils.py
campsite/campsite_lib/: __init__.py  analysis_graph.py  artifact_gen.py  contracts.py  hypothesis_node.py  hypothesis_translators.py  ir_ast.py  ir_parser.py  nl_extractors.py  si_checkers.py  utils.py  vega_utils.py
campsite/campsite_lib/grammar_specs/: .grammar_v3_full.txt  grammar_v1.txt  grammar_v1_revised.txt  grammar_v2.txt  grammar_v2_revised.txt  grammar_v3.txt  grammar_v3_revised.txt
campsite/src/: campsite.ts
tests/: test_campsite_lib.py
