[tool.poetry]
name = "campsite"
version = "0.1"
description = "Campsite. An AI-powered analysis assistant for Jupyter notebooks."
authors = [
    "Connor Scully-Allison <cscullyallison@sci.utah.edu"
]
license = "MIT"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
